	stuff if the specified encoding is the defautl encoding.
	Tidied some stuff to conform better to coding standards.
	* Source/Unicode.m GetDefEncoding(): prohibit UTF8 from being the
	default cString encoding ... the default cString encoding must
	consist of 7 or 8 bit characters, and must contain ASCII as a
	subset.  We really should think of a generalised test for that.

2001-04-11  Nicola Pero  <nicola@brainstorm.co.uk>
	
	* Source/NSString.m ([-initWithData:encoding:]): When working with
	a generic but non-unicode encoding, do not treat a single
	character string with no null terminator as an empty string.  This
	should fix passing single character strings over DO.
	* Source/NSThread.m ([+registerCurrentThread]),
	([+unregisterCurrentThread]): Removed.

2001-04-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFCallInvocation.m: bugfix encoding ... pass correct
	method type information so that the other end knows whether this
	is a oneway message or not.  Corrects major memory leak.
	* Source/NSConnection.m: bugfix to handle situations where the
	other end sends a response and we are not expecting it.  Also
	added various bits of debugging and ensured that all NSPortCoder
	objects are cached.

2001-04-10  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/preface.h.in: Correct NeXT_RUNTIME name

	* Documentation/gsdoc/NSLock.h: Documented.

2001-04-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m: Bugfix to send out task termination notification
	and clean up correctly when a task is killed by a signal rather than
	exiting cleanly.

2001-04-09  Adam Fedor  <fedor@gnu.org>

	* 1.0 branch merged into main.

2001-04-06  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSString.m (pathSepMember): Made trivial and inlined.
	([-stringsByAppendingPaths:]): Count the array only once, not for
	any loop in the cycle.
	
2001-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: NSTemporaryDirectory() rewrite for improved